# osi_lab2

./: CMakeLists.txt  README.md  create-file.c  io-thpt-read-new.c  io-thpt-read.c  lab2.c  lab2.h  test.c
.github/workflows/: ci.yml
